--- a/dummy-data-product/src/requirements.txt
+++ b/dummy-data-product/src/requirements.txt
@@ -1,6 +1,26 @@
+attrs==23.1.0
+certifi==2023.7.22
+charset-normalizer==3.3.0
+exceptiongroup==1.1.3
+h11==0.14.0
+idna==3.4
 numpy==1.20.3
+outcome==1.2.0
+packaging==23.2
 pandas==1.3.4
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3.post1
 requests==2.28.2
 selenium==4.8.0
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.5
 tqdm==4.62.3
-webdriver_manager==3.8.5
+trio==0.22.2
+trio-websocket==0.11.1
+urllib3==1.26.17
+webdriver-manager==3.8.5
+wsproto==1.2.0
